[gd_scene load_steps=2 format=3 uid="uid://b3rlt8nyecur3"]

[ext_resource type="Script" uid="uid://ce5nnmcwvkyvv" path="res://scripts/MultiplayerManager.gd" id="1_2345"]

[node name="MultiplayerManager" type="Node"]
script = ExtResource("1_2345")

[node name="MultiplayerManager" type="Node" parent="."]

[node name="MultiplayerMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="MultiplayerMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -54.5
offset_right = 100.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="MultiplayerMenu/MenuContainer"]
layout_mode = 2
text = "Host Game"

[node name="HSeparator" type="HSeparator" parent="MultiplayerMenu/MenuContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MultiplayerMenu/MenuContainer"]
layout_mode = 2
text = "localhost:6789"
alignment = 1

[node name="JoinButton" type="Button" parent="MultiplayerMenu/MenuContainer"]
layout_mode = 2
text = "Join Game"

[connection signal="pressed" from="MultiplayerMenu/MenuContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MenuContainer/JoinButton" to="." method="_on_join_pressed"]
